add habit api and fruit list api ,modify JWT using flow
